fix: return creator login instead of id
